# pubscribe

./: .env.example  Cargo.toml  README.md
content/: welcome.md
src/: main.rs
